--- a/portfolio.html
+++ b/portfolio.html
@@ -76,7 +76,7 @@
 
 	<footer>
 		<div class="container"> 
-			&copy; Copyright 2017 Cassandra Henderson
+			&copy; Copyright @2017 Cassandra Henderson
 		</div>
 	</footer>
 
